# lib_hw

./: .gitignore  CMakeLists.txt  Makefile  OLED_README.md  README.md  WARP.md  pico_sdk_import.cmake
demos/: encoder_demo.c  oled_demo.c  rgb_led_demo.c  stepper_demo.c
lib/: lib.h
lib/button/: button.c  button.h
lib/encoder/: encoder_ec11.c  encoder_ec11.h
lib/oled/: SH1106_datasheet.md  sh1106.c  sh1106.h
lib/rgb_led/: ws2812.c  ws2812.h  ws2812.pio
lib/stepper/: stepper_28byj48.c  stepper_28byj48.h
src/: encoder_demo.c  main.c  oled_demo.c  oled_working.c  sh1106.c  sh1106.h
